--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "sendgrid/sendgrid": "^7.10"
+        "s-ichikawa/laravel-sendgrid-driver": "~3.0",
+        "sendgrid/sendgrid": "^7.11"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
